# Signaling_Sample_Code

./: .gitignore  README.md
Android/: README.md
Android/Signalling/: local.properties
Android/Signalling/app/: build.gradle
Android/Signalling/app/src/main/: AndroidManifest.xml
Android/Signalling/app/src/main/java/com/netease/signalling/demo/activity/: ChattingActivity.java  LoginActivity.java  MainActivity.java
Android/Signalling/app/src/main/java/com/netease/signalling/demo/app/: DemoApplication.java
Android/Signalling/app/src/main/java/com/netease/signalling/demo/call/: SimpleNRtcCallback.java
Android/Signalling/app/src/main/java/com/netease/signalling/demo/model/: CacheInfo.java
Android/Signalling/app/src/main/java/com/netease/signalling/demo/utils/: BaseUtil.java  HexDump.java  (+1 more)
Android/Signalling/app/src/main/res/drawable/: click_btn_selector_bg.xml  close_camera_icon_bg_selector.xml  edit_text_normal_bg.xml  mute_icon_bg_selector.xml
Android/Signalling/app/src/main/res/layout/: activity_chationg.xml  activity_login.xml  activity_main.xml  activity_room.xml
Android/Signalling/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Android/Signalling/gradle/wrapper/: gradle-wrapper.properties
PC/: .gitignore  README.md  signaling.pro
PC/libs/: jsoncpp_d.lib
PC/libs/nim_sdk_cpp_lib/: nim_sdk_cpp_lib.cpp  nim_sdk_cpp_lib.h  nim_sdk_cpp_lib.pro
PC/libs/nim_sdk_cpp_lib/nim_c_sdk/: nim_sdk_api.h
PC/libs/nim_sdk_cpp_lib/nim_c_sdk/api/: nim_client.h  nim_device.h  nim_msglog.h  nim_nos.h  nim_session.h  nim_signaling.h  nim_team.h  nim_vchat.h
PC/libs/nim_sdk_cpp_lib/nim_c_sdk/include/: nim_client_def.h  nim_device_def.h  nim_global_def.h  nim_msglog_def.h  nim_nos_def.h  nim_res_code_def.h  nim_session_def.h  nim_signaling_def.h  nim_team_def.h  nim_vchat_def.h
PC/libs/nim_sdk_cpp_lib/nim_sdk_cpp/: CMakeLists.txt  nim_sdk_cpp_lib_vs2013.vcxproj  nim_sdk_cpp_lib_vs2013.vcxproj.filters  nim_sdk_cpp_wrapper_dll.vcxproj  nim_sdk_cpp_wrapper_dll.vcxproj.filters
PC/libs/nim_sdk_cpp_lib/nim_sdk_cpp/api/: nim_cpp_client.cpp  nim_cpp_client.h  nim_cpp_friend.cpp  nim_cpp_friend.h  nim_cpp_msglog.cpp  nim_cpp_msglog.h  nim_cpp_nos.cpp  nim_cpp_nos.h  nim_cpp_signaling.cpp  nim_cpp_signaling.h  nim_cpp_team.cpp  nim_cpp_team.h  nim_cpp_vchat.cpp  nim_cpp_vchat.h
PC/libs/nim_sdk_cpp_lib/nim_sdk_cpp/helper/: nim_client_helper.cpp  nim_client_helper.h  nim_friend_helper.h  nim_msglog_helper.cpp  nim_msglog_helper.h  nim_signaling_helper.h  nim_talk_helper.h  nim_team_helper.cpp  nim_team_helper.h
PC/libs/nim_sdk_cpp_lib/nim_sdk_cpp/util/: nim_json_util.cpp  nim_sdk_util.cpp  nim_sdk_util.h
PC/shared/nim/: channel_manager.cpp  channel_manager.h  login_manager.cpp  login_manager.h
PC/shared/provider/: frame_provider.cpp  frame_provider.h
PC/shared/qml/: Caption.qml  ImageButton.qml  shared.qrc
PC/signaling/: Login.qml  LoginForm.ui.qml  SignalingFront.qml  SignalingFrontForm.ui.qml  SignalingRoom.qml  SignalingRoomForm.ui.qml  main.cpp  main.qml  qml.qrc  signaling.pro
Signaling/Android/Signalling/: local.properties
Signaling/Android/Signalling/app/src/main/res/layout/: activity_login.xml  activity_main.xml  member_info_item.xml
Signaling/Android/Signalling/app/src/main/res/values/: strings.xml
Web/: README.md
Web/libs/: NIM_Web_NIM_v6.4.0.js
Web/signaling/: index.html  index.js
iOS/: README.md
iOS/Signaling/: Podfile
iOS/Signaling/Signaling/: AppDelegate.h  AppDelegate.m  NTESDemoConfig.h
iOS/Signaling/Signaling.xcodeproj/: project.pbxproj
iOS/Signaling/Signaling.xcodeproj/xcuserdata/netease.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/Signaling/Signaling.xcodeproj/xcuserdata/netease.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/Signaling/Signaling/Classes/Sections/: NTESLoginVC.h  NTESLoginVC.m  NTESRoomVC.h  NTESRoomVC.m  NTESSelectedVC.h  NTESSelectedVC.m
iOS/Signaling/Signaling/Classes/Unit/: NTESDataCenter.h  NTESDataCenter.m
iOS/Signaling/Signaling/Support Files/: Signaling.pch  main.m
iOS/Signaling/Signaling/Support Files/Base.lproj/: Main.storyboard
(+3 files in other folders)
